# improved-aiv-editor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  epilogue.sh  pyproject.toml
src/improved_aiv_editor/: __init__.py  building_data.json  i18n.py  main.py  settings.py
src/improved_aiv_editor/models/: aiv_document.py  building_registry.py  commands.py  tile_grid.py
src/improved_aiv_editor/tools/: base_tool.py  ellipse_tool.py  moat_pitch_brush_tool.py  place_tool.py  select_tool.py  wall_tool.py
src/improved_aiv_editor/utils/: coordinates.py  tile_line.py
src/improved_aiv_editor/views/: building_palette.py  main_window.py  map_canvas.py  properties_panel.py  timeline_panel.py
