[project]
name = "improved_aiv_editor"
version = "0.1.0"
description = "AIV Castle Editor for Stronghold Crusader"
readme = "README.md"
authors = []
requires-python = ">=3.12"

dependencies = [
    "PyQt6>=6.6.0",
]

[project.scripts]
main = "improved_aiv_editor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/improved_aiv_editor"]
